Fix some irrelevant layout issues

--- a/src/index.less
+++ b/src/index.less
@@ -33,6 +33,6 @@ body {
   // add checkbox indent for long text
   .ant-form-item label {
     padding-left: 1.5em;
-    text-indent: -1.6em;
+    text-indent: -1.5em;
   }
 }
